Melhorias no app.js

--- a/logica-js-projeto_inicial/style.css
+++ b/logica-js-projeto_inicial/style.css
@@ -110,3 +110,9 @@ button{
     color: rgb(0, 183, 255);
     margin: 10px;
 }
+
+#chutes, #numerosChutados{
+    font-size: 20px;
+    color: silver;
+    margin-bottom: 20px;
+}
